# longest-uncrossed-knighttour

./: README.md
src/: CMakeLists.txt  main.cpp
src/classes/: Board.h  Helper.h  KnightMoveTask_par.h  KnightMoveTask_seq.h
